--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: black;
+  background: whitesmoke;
   color: grey;
 }
 
@@ -14,5 +14,40 @@ code {
     monospace;
 }
 
-doneBox {
+.wholePage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header {
+}
+
+.listLine {
+  max-width: 70%;
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  font-size: 25px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: grey;
+  box-shadow: inset;
+}
+
+.form {
+  display: flex;
+  flex-direction: row;
+  white-space: normal;
+}
+
+button {
+  background-color: pink;
+  border: 1px;
+  color: black;
+  padding: 5px 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
