--- a/src/index.css
+++ b/src/index.css
@@ -20,19 +20,21 @@ code {
   align-items: center;
 }
 
-.header {
+input {
+  min-width: 100px;
 }
 
 .listLine {
-  max-width: 70%;
+  max-width: 80%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   list-style-type: none;
   font-size: 25px;
   border-style: solid;
   border-width: 2px;
   border-color: grey;
   box-shadow: inset;
+  padding: 30px;
 }
 
 .form {
@@ -41,7 +43,7 @@ code {
   white-space: normal;
 }
 
-button {
+/* button {
   background-color: pink;
   border: 1px;
   color: black;
@@ -50,4 +52,4 @@ button {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-}
+} */
