--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@ input {
 }
 
 .listLine {
+  background-color: white;
   max-width: 80%;
   display: flex;
   justify-content: space-between;
@@ -35,6 +36,7 @@ input {
   border-color: grey;
   box-shadow: inset;
   padding: 30px;
+  box-shadow: 5px 10px #888888;
 }
 
 .form {
